--- a/releasenotes.txt
+++ b/releasenotes.txt
@@ -1,1 +1,11 @@
 1.5.2
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent placerat, mauris ut fringilla placerat, justo tellus laoreet ante, eu dignissim est justo a orci. In hac habitasse platea dictumst. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Maecenas dapibus quam a ligula egestas, at lacinia lorem porta. Mauris vitae accumsan nibh, a suscipit lacus. Sed mattis ante tortor, eu rutrum augue maximus in. Pellentesque non condimentum felis. Nam tincidunt lorem eget velit bibendum, sit amet commodo ex finibus. Vivamus eu enim metus. In hac habitasse platea dictumst. Suspendisse in hendrerit nunc, at laoreet ligula. Nullam convallis eu nisl sed feugiat. In neque sem, feugiat sit amet ligula et, volutpat convallis purus. Cras ultricies gravida mollis.
+
+Nulla magna justo, condimentum id velit tempus, rutrum congue risus. Morbi egestas mollis mi in ullamcorper. Sed sit amet leo dolor. Nam in mauris interdum, euismod enim ut, aliquam lorem. Fusce aliquam tellus a urna mattis accumsan. Vestibulum suscipit et ex eget condimentum. Etiam viverra lobortis lacus, a tristique ante consequat id. Vivamus vel suscipit erat. Sed eget ipsum odio. Curabitur ac nunc hendrerit, imperdiet nibh commodo, auctor elit. Donec fringilla varius magna hendrerit mollis. Nulla ullamcorper risus non dolor rutrum, at bibendum felis tincidunt. Praesent dui massa, bibendum a mollis maximus, lacinia sit amet velit. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque luctus vitae dolor a posuere. Donec consectetur ac felis eget malesuada.
+
+In laoreet nulla elit, quis molestie purus efficitur non. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi mattis tempus magna in consectetur. Sed turpis mi, eleifend ut erat at, accumsan semper elit. Sed hendrerit tempus enim, nec posuere arcu auctor tempor. Proin at gravida augue. Morbi dictum lectus velit, ut bibendum tellus elementum in. Mauris in euismod diam, nec venenatis ex. Cras nec gravida turpis. Phasellus venenatis, lectus sit amet vulputate aliquet, velit est rhoncus turpis, eget rhoncus ipsum urna nec risus. Ut viverra tincidunt tortor, nec interdum mauris tristique et. Vivamus viverra euismod est ut elementum.
+
+Praesent tristique lobortis maximus. Pellentesque lacinia purus id magna posuere, a mollis ante eleifend. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer risus ligula, tempus non justo quis, auctor laoreet velit. In vitae massa fringilla, semper ante eget, vestibulum lectus. Morbi pharetra nisi sapien, in viverra nisi volutpat non. Sed pharetra purus nec hendrerit malesuada. Praesent non consequat tortor, at varius erat. Pellentesque fringilla elit mauris, ac ornare tortor congue eget. Maecenas rutrum euismod lectus id pharetra. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+
+Praesent ut nisi in turpis ultricies tincidunt vel eu lectus. Proin efficitur, nisi pulvinar sollicitudin iaculis, urna elit vestibulum libero, quis ornare dolor ante nec enim. Ut enim massa, auctor nec erat eu, ullamcorper pharetra quam. Etiam eget pharetra leo. Mauris molestie arcu ac nisi tempus, at tincidunt tellus cursus. Phasellus semper erat bibendum, ullamcorper eros et, mattis massa. Duis sit amet tempus sapien. Fusce placerat ex et augue pellentesque sagittis. Vivamus pharetra dignissim quam a aliquet. Suspendisse suscipit feugiat sagittis. Vestibulum tincidunt sed purus at sollicitudin. Nulla facilisi. Praesent ac justo in odio finibus rutrum. Integer pulvinar efficitur mattis.
